# uao-model-deployment-course

./: README.md  pyproject.toml
class1/face_detection_app/: GoogleApi.js  mymodule.js  package-lock.json  package.json  server.js
class1/face_detection_app/public/: index.audio.html  index.html
class1/face_detection_app/public/js/: app.js
class1/face_detection_app/public/models/duckvschicken/: metadata.json
class3/irisClassifier/: index.html
class3/mobilenet/: index.html
class3/python2js/: flower-classifier.ipynb  index.html
class3/pythontojs/model/: model.json
class4/tflite-android/: Text_Classification_Model.ipynb
class4/tflite-android/textClassifier/: settings.gradle
class4/tflite-android/textClassifier/app/: build.gradle
class4/tflite-android/textClassifier/app/src/androidTest/java/com/example/textclassifier/: ExampleInstrumentedTest.kt
class4/tflite-android/textClassifier/app/src/main/: AndroidManifest.xml
class4/tflite-android/textClassifier/app/src/main/assets/: model.tflite  vocab.txt
class4/tflite-android/textClassifier/app/src/main/java/com/example/textclassifier/: MainActivity.kt
class4/tflite-android/textClassifier/app/src/main/res/layout/: activity_main.xml
class4/tflite-android/textClassifier/app/src/main/res/values/: strings.xml  themes.xml
class4/tflite-android/textClassifier/app/src/main/res/values-night/: themes.xml
class4/tflite-android/textClassifier/gradle/wrapper/: gradle-wrapper.properties
class5/tflite-raspi/: README.md  audio.py  audio_classification.ipynb  main.py  util.py
(+1 files in other folders)
