[tool.poetry]
name = "uao-model-deployment-course"
version = "0.1.0"
description = ""
authors = ["Henry Ruiz <henry.ruiz@tamu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^2.2.9"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
sklearn = "^0.0"
tensorflow = "2.5.0"
nbconvert = "^6.0.7"
pydot = "^1.4.2"
seaborn = "^0.11.1"
tensorflow-datasets = "^4.3.0"
tflite = "^2.4.0"
ipywidgets = "^7.6.3"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
